--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "mongoose": "^8.0.1",
-    "next": "13.4.10",
+    "next": "^14",
     "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.48.2"
-  },
-  "devDependencies": {
+    "react-hook-form": "^7.48.2",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
