--- a/package.json
+++ b/package.json
@@ -18,24 +18,27 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@types/node": "^20.9.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@uploadthing/react": "^6.0.0",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "lucide-react": "^0.292.0",
     "mongoose": "^8.0.1",
     "next": "^14",
+    "postcss": "^8",
     "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "@types/node": "^20.9.1",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uploadthing": "^6.0.1",
+    "zod": "^3.22.4"
   }
 }
