--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.65.1",
+    "@clerk/nextjs": "^4.27.1",
+    "@clerk/themes": "^1.7.9",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@radix-ui/react-label": "^2.0.2",
